Fix overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ body {
 /* Main panel container */
 #main-container {
   width: 100vw;
-  height: 100%;
+  height: calc(100% - var(--nav-bar-height));
   display: flex;
   flex: 1;
   flex-flow: row nowrap;
